--- a/lions.html
+++ b/lions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Big Cats</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -21,46 +21,103 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
-            <!--This is the Title -->
-            <div class="text-center col-12">
-                <h1 id="title" class="display-1">Lions</h1>
-            </div>
-            <!--This is the Nav Menu-->
-            <nav class="navbar bg-light col-4">
-            <div class="container-fluid ">
-              <a class="navbar-brand" href="#">Menu</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="lions.html">Lions</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cheetah.html">Cheetah</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="leopard.html">Leopard</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="caracal.html">Caracal</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            </nav>
-            <!--This is the pages content-->
-
+      <div class="row">
+        <!--This is the Title -->
+        <div class="text-center col-12">
+          <h1 id="title" class="display-1">Lions</h1>
         </div>
+        <!--This is the Nav Menu-->
+        <nav class="navbar bg-light col-4">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="lions.html">Lions</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cheetah.html">Cheetah</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="leopard.html">Leopard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="caracal.html">Caracal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <!--This is the pages content-->
+        <div class="col-12">
+          <div class="mb-5 text">
+            The lion (Panthera leo) is a large cat of the genus Panthera native
+            to Africa and India. It has a muscular, broad-chested body, short,
+            rounded head, round ears, and a hairy tuft at the end of its tail.
+            It is sexually dimorphic; adult male lions are larger than females
+            and have a prominent mane. It is a social species, forming groups
+            called prides. A lion's pride consists of a few adult males, related
+            females, and cubs. Groups of female lions usually hunt together,
+            preying mostly on large ungulates. The lion is an apex and keystone
+            predator; although some lions scavenge when opportunities occur and
+            have been known to hunt humans, the species typically does not
+            actively seek out and prey on humans.
+          </div>
+          <div class="text-center">
+            <img src="images/lionOne.webp" alt="picture of lion">
+          </div>
+          <div class="mb-5 mt-5 text">
+            The lion inhabits grasslands, savannas and shrublands. It is usually
+            more diurnal than other wild cats, but when persecuted, it adapts to
+            being active at night and at twilight. During the Neolithic period,
+            the lion ranged throughout Africa and Eurasia from Southeast Europe
+            to India, but it has been reduced to fragmented populations in
+            sub-Saharan Africa and one population in western India. It has been
+            listed as Vulnerable on the IUCN Red List since 1996 because
+            populations in African countries have declined by about 43% since
+            the early 1990s. Lion populations are untenable outside designated
+            protected areas. Although the cause of the decline is not fully
+            understood, habitat loss and conflicts with humans are the greatest
+            causes for concern.
+          </div>
+          <div class="text-center">
+            <img src="images/lionTwo.webp" alt="image of baby lion">
+          </div>
+          <div class="mb-5 mt-5 text">
+            One of the most widely recognised animal symbols in human culture,
+            the lion has been extensively depicted in sculptures and paintings,
+            on national flags, and in contemporary films and literature. Lions
+            have been kept in menageries since the time of the Roman Empire and
+            have been a key species sought for exhibition in zoological gardens
+            across the world since the late 18th century. Cultural depictions of
+            lions were prominent in Ancient Egypt, and depictions have occurred
+            in virtually all ancient and medieval cultures in the lion's
+            historic and current range.
+          </div>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
