--- a/cheetah.html
+++ b/cheetah.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Big Cats</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -21,46 +21,115 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
-            <!--This is the Title -->
-            <div class="text-center col-12">
-                <h1 id="title" class="display-1">Cheetah</h1>
-            </div>
-            <!--This is the Nav Menu-->
-            <nav class="navbar bg-light col-4">
-              <div class="container-fluid ">
-                <a class="navbar-brand" href="#">Menu</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="lions.html">Lions</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="cheetah.html">Cheetah</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="leopard.html">Leopard</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="caracal.html">Caracal</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-            <!--This is the pages content-->
-
+      <div class="row">
+        <!--This is the Title -->
+        <div class="text-center col-12">
+          <h1 id="title" class="display-1">Cheetah</h1>
         </div>
+        <!--This is the Nav Menu-->
+        <nav class="navbar bg-light col-4">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="lions.html">Lions</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cheetah.html">Cheetah</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="leopard.html">Leopard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="caracal.html">Caracal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <!--This is the pages content-->
+        <div class="col-12">
+          <div class="mb-2 text">
+            The cheetah (Acinonyx jubatus) is a large cat native to Africa and
+            central Iran. It is the fastest land animal, estimated to be capable
+            of running at 80 to 128 km/h (50 to 80 mph) with the fastest
+            reliably recorded speeds being 93 and 98 km/h (58 and 61 mph), and
+            as such has evolved specialized adaptations for speed, including a
+            light build, long thin legs and a long tail. It typically reaches
+            67–94 cm (26–37 in) at the shoulder, and the head-and-body length is
+            between 1.1 and 1.5 m (3 ft 7 in and 4 ft 11 in). Adults weigh
+            between 21 and 72 kg (46 and 159 lb). Its head is small and rounded,
+            with a short snout and black tear-like facial streaks. The coat is
+            typically tawny to creamy white or pale buff and is mostly covered
+            with evenly spaced, solid black spots. Four subspecies are
+            recognised.
+          </div>
+          <div class="text-center">
+            <img src="images/cheetahOne.webp" alt="picture of cheetah" />
+          </div>
+          <div class="mb-5 mt-5 text">
+            The cheetah lives in three main social groups: females and their
+            cubs, male "coalitions", and solitary males. While females lead a
+            nomadic life searching for prey in large home ranges, males are more
+            sedentary and instead establish much smaller territories in areas
+            with plentiful prey and access to females. The cheetah is active
+            during the day, with peaks during dawn and dusk. It feeds on small-
+            to medium-sized prey, mostly weighing under 40 kg (88 lb), and
+            prefers medium-sized ungulates such as impala, springbok and
+            Thomson's gazelles. The cheetah typically stalks its prey to within
+            60–70 m (200–230 ft), charges towards it, trips it during the chase
+            and bites its throat to suffocate it to death. It breeds throughout
+            the year. After a gestation of nearly three months, a litter of
+            typically three or four cubs is born. Cheetah cubs are highly
+            vulnerable to predation by other large carnivores such as hyenas and
+            lions. They are weaned at around four months and are independent by
+            around 20 months of age.
+          </div>
+          <div class="text-center">
+            <img src="images/cheetahTwo.jpg" alt="image of baby cheetah" />
+          </div>
+          <div class="mb-5 mt-5 text">
+            The cheetah occurs in a variety of habitats such as savannahs in the
+            Serengeti, arid mountain ranges in the Sahara and hilly desert
+            terrain in Iran. The cheetah is threatened by several factors such
+            as habitat loss, conflict with humans, poaching and high
+            susceptibility to diseases. Historically ranging throughout most of
+            Sub-Saharan Africa and extending eastward into the Middle East and
+            to central India, the cheetah is now distributed mainly in small,
+            fragmented populations in central Iran and southern, eastern and
+            northwestern Africa. In 2016, the global cheetah population was
+            estimated at 7,100 individuals in the wild; it is listed as
+            Vulnerable on the IUCN Red List. In September 2022, they were
+            reintroduced to India after being extinct in the country for 70
+            years. In the past, cheetahs were tamed and trained for hunting
+            ungulates. They have been widely depicted in art, literature,
+            advertising, and animation.
+          </div>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
