--- a/leopard.html
+++ b/leopard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Big Cats</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -21,47 +21,89 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
-            <!--This is the Title -->
-            <div class="text-center col-12">
-                <h1 id="title" class="display-1">Leopard</h1>
-            </div>
-            <!--This is the Nav Menu-->
-            <nav class="navbar bg-light col-4">
-            <div class="container-fluid ">
-              <a class="navbar-brand" href="#">Menu</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="lions.html">Lions</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cheetah.html">Cheetah</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="leopard.html">Leopard</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="caracal.html">Caracal</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            </nav>
-            <!--This is the pages content-->
-      
-
+      <div class="row">
+        <!--This is the Title -->
+        <div class="text-center col-12">
+          <h1 id="title" class="display-1">Leopard</h1>
         </div>
+        <!--This is the Nav Menu-->
+        <nav class="navbar bg-light col-4">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="lions.html">Lions</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cheetah.html">Cheetah</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="leopard.html">Leopard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="caracal.html">Caracal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <!--This is the pages content-->
+        <div class="col-12">
+          <div class="mb-2 text">
+            The African leopard (Panthera pardus pardus) is the nominate
+            subspecies of the leopard, native to many countries in Africa. It is
+            widely distributed in most of sub-Saharan Africa, but the historical
+            range has been fragmented in the course of habitat conversion.[3]
+            Leopards have also been recorded in North Africa as well.
+          </div>
+          <div class="text-center">
+            <img src="images/leopardOne.jpg" alt="picture of cheetah" />
+          </div>
+          <div class="mb-5 mt-5 text">
+            The African leopard exhibits great variation in coat color,
+            depending on location and habitat. Coat colour varies from pale
+            yellow to deep gold or tawny, and sometimes black, and is patterned
+            with black rosettes while the head, lower limbs and belly are
+            spotted with solid black. Male leopards are larger, averaging 58 kg
+            (128 lb) with 90 kg (200 lb) being the maximum weight attained by a
+            male. Females weigh about 37.5 kg (83 lb) on average.
+          </div>
+          <div class="text-center">
+            <img src="images/leopardTwo.jpg" alt="image of baby cheetah" />
+          </div>
+          <div class="mb-5 mt-5 text">
+            The African leopard is sexually dimorphic; males are larger and
+            heavier than females.[15] Between 1996 and 2000, 11 adult leopards
+            were radio-collared on Namibian farmlands. Males weighed 37.5 to
+            52.3 kg (83 to 115 lb) only, and females 24 to 33.5 kg (53 to 74
+            lb).[16] The heaviest known leopard weighed about 96 kg (212 lb),
+            and was recorded in South West Africa.
+          </div>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
