--- a/caracal.html
+++ b/caracal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Big Cats</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -21,46 +21,93 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
-            <!--This is the Title -->
-            <div class="text-center col-12">
-                <h1 id="title" class="display-1">Caracal</h1>
-            </div>
-            <!--This is the Nav Menu-->
-            <nav class="navbar bg-light col-4">
-              <div class="container-fluid ">
-                <a class="navbar-brand" href="#">Menu</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="lions.html">Lions</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="cheetah.html">Cheetah</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="leopard.html">Leopard</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="caracal.html">Caracal</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-            <!--This is the pages content-->
-
+      <div class="row">
+        <!--This is the Title -->
+        <div class="text-center col-12">
+          <h1 id="title" class="display-1">Caracal</h1>
         </div>
+        <!--This is the Nav Menu-->
+        <nav class="navbar bg-light col-4">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="lions.html">Lions</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cheetah.html">Cheetah</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="leopard.html">Leopard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="caracal.html">Caracal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <!--This is the pages content-->
+        <div class="col-12">
+          <div class="mb-2 text">
+            The caracal (Caracal caracal) (/ˈkærəkæl/), is a medium-sized wild
+            cat native to Africa, the Middle East, Central Asia, and arid areas
+            of Pakistan and northwestern India. It is characterised by a robust
+            build, long legs, a short face, long tufted ears, and long canine
+            teeth. Its coat is uniformly reddish tan or sandy, while the ventral
+            parts are lighter with small reddish markings. It reaches 40–50 cm
+            (16–20 in) at the shoulder and weighs 8–19 kg (18–42 lb). It was
+            first scientifically described by German naturalist Johann Christian
+            Daniel von Schreber in 1776. Three subspecies are recognised.
+          </div>
+          <div class="text-center">
+            <img src="images/caracalOne.webp" alt="picture of caracal" />
+          </div>
+          <div class="mb-5 mt-5 text">
+            Typically nocturnal, the caracal is highly secretive and difficult
+            to observe. It is territorial, and lives mainly alone or in pairs.
+            The caracal is a carnivore that typically preys upon small mammals,
+            birds, and rodents. It can leap higher than 3.0 m (10 ft) and catch
+            birds in midair. It stalks its prey until it is within 5 m (16 ft)
+            of it, after which it runs it down and kills its prey with a bite to
+            the throat or to the back of the neck. Both sexes become sexually
+            mature by the time they are one year old and breed throughout the
+            year. Gestation lasts between two and three months, resulting in a
+            litter of one to six kittens. Juveniles leave their mothers at the
+            age of nine to ten months, though a few females stay back with their
+            mothers. The average lifespan of captive caracals is nearly 16
+            years.
+          </div>
+          <div class="text-center">
+            <img src="images/caracalTwo.png" alt="image of baby caracal" />
+          </div>
+          <div class="mb-5 mt-5 text">
+            Caracals were tamed in Ancient Egypt and used for coursing in India and Persia.
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
