--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,16 @@
             </div>
             </nav>
             <!--This is the pages content-->
-
+            <div class="text-center display-5">
+              <div>Let us know what you thought of our page!</div>
+            </div>
+            <div>
+              <ul>
+                <li>Phone: (506)609-2699</li>
+                <li>Email: bchase01@mynbcc.ca</li>
+                <li>Mailing Address: 101 Feline ave, C2A-3TS</li>
+              </ul>
+            </div>
         </div>
     </div>
     
