--- a/leopard.html
+++ b/leopard.html
@@ -80,7 +80,7 @@
             Leopards have also been recorded in North Africa as well.
           </div>
           <div class="text-center">
-            <img src="images/leopardOne.jpg" alt="picture of cheetah" />
+            <img src="images/leopardOne.jpg" alt="picture of leopard" />
           </div>
           <div class="mb-5 mt-5 text">
             The African leopard exhibits great variation in coat color,
@@ -92,7 +92,7 @@
             male. Females weigh about 37.5 kg (83 lb) on average.
           </div>
           <div class="text-center">
-            <img src="images/leopardTwo.jpg" alt="image of baby cheetah" />
+            <img src="images/leopardTwo.jpg" alt="image of baby leopard" />
           </div>
           <div class="mb-5 mt-5 text">
             The African leopard is sexually dimorphic; males are larger and
