--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,11 @@
             <div class="text-center display-5">
               <div>Let us know what you thought of our page!</div>
             </div>
+            <div class="text-center mt-3">
+              <img src="images/contactTwo.jpg" alt="lion waving">
+            </div>
             <!--This is the form-->
-            <div class="mt-5 mb-5 text-center border text bg-secondary ">
+            <div class="mt-2 mb-2 text-center border text bg-secondary ">
               <form>
                 <div>
                  Email
@@ -104,6 +107,9 @@
              </form>
             </div>
             <!--This is the contact info-->
+            <div class="text-center">
+              <img src="images/contactOne.jpg" alt="picture of a fat cat">
+            </div>
             <div class="text">
               <ul>
                 <li>Phone: (506)609-2699</li>
